--- a/servicemanager/templates/servicemanager/myissues.html
+++ b/servicemanager/templates/servicemanager/myissues.html
@@ -1,62 +1,134 @@
-{% extends 'base.html' %} {% block heading %} My Issues {% endblock heading %}
+{% extends 'base.html' %}
+{% block heading %} My Issues {% endblock heading %}
 {% block content %}
 
-<form
-  class="flex flex-col sm:flex-row items-center justify-start"
-  method="GET"
-  action="/my-issues/"
->
-  <button
-    class="text-gray-900 w-1/2 hover:shadow-md text-md rounded bg-yellow-400 px-4 py-2"
-    name="all"
-    type="submit"
-  >
-    All Requests
-  </button>
-  <button
-    class="text-white ml-0 mt-4 w-1/2 sm:mt-0 sm:ml-8 hover:shadow-md text-md rounded bg-green-600 px-4 py-2"
-    name="issued"
-    type="submit"
-  >
-    Confirmed Requests
-  </button>
-  <button
-    class="text-white ml-0 w-1/2 mt-4 sm:mt-0 sm:ml-8 hover:shadow-md text-md rounded bg-red-500 px-4 py-2"
-    name="notissued"
-    type="submit"
-  >
-    Rejected Requests
-  </button>
-</form>
-<ul class="list-disc px-4 mt-8">
-  {% for issue in issues %}
-  <li class="">
-    <h3 class="text-xl font-semibold tracking-wide">
-      Request type: {{issue.type}}
-    </h3>
-    <h4 class="text-xs">{{issue.created_at}}</h4>
-    <div class="flex flex-row w-2/3 space-x-4 mt-4 mb-8">
-      {% if issue.issued %}
-      <h5 class="w-xs font-bold rounded bg-green-600 px-4 py-1">Confirmed</h5>
-      <h5 class="w-xs font-bold text-red-500 px-4 py-1">
-        Return Date : {{issue.return_date}}
-      </h5>
-      {% else %}
-      <h5 class="w-xs rounded font-bold text-pink-500 px-0 py-0">
-        Issue Request Pending
-      </h5>
-      {% endif %}
-      <!--  -->
-      {% if issue.issued and issue.returned %}
-      <h5 class="w-xs rounded font-bold bg-green-600 px-4 py-1">Returned</h5>
-      {% else %}
-      <h5 class="w-xs font-bold px-4 py-1">{{issue.days_no}}</h5>
-      {% endif %}
+<div class="container mx-auto px-4 sm:px-8">
+  <div class="py-8">
+    <div>
+      <h2 class="text-2xl font-semibold leading-tight">Issues</h2>
     </div>
-  </li>
-  {% empty %}
-  <h2>Nothing Found</h2>
-  {% endfor %}
-</ul>
+    <div class="-mx-4 sm:-mx-8 px-4 sm:px-8 py-4 overflow-x-auto">
+      <div
+        class="inline-block min-w-full shadow-md rounded-lg overflow-hidden"
+      >
+        <table class="min-w-full leading-normal">
+          <thead>
+            <tr>
+              <th
+                class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
+              >
+                ID
+              </th>
+              <th
+                class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
+              >
+                Name
+              </th>
+              <th
+                class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
+              >
+                Department
+              </th>
+              <th
+                class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
+              >
+                Service
+              </th>
+              <th
+                class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
+              >
+                Cost
+              </th>
+              <th
+                class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
+              >
+                Status
+              </th>
+              <th
+                class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
+              >
+                Issue
+              </th>
+              <th
+                class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100"
+              ></th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for issue in issues %}
+            <tr>
+              <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                <div class="flex">
+                  <div class="ml-0">
+                    <p class="text-gray-900 whitespace-no-wrap">
+                      {{issue.id}}
+                    </p>
+                  </div>
+                </div>
+              </td>
+              <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                <div class="flex">
+                  <div class="ml-0">
+                    <p class="text-gray-900 whitespace-no-wrap">
+                      {{issue.name}}
+                    </p>
+                    <p class="text-gray-600 whitespace-no-wrap">{{issue.staff_id}}</p>
+                  </div>
+                </div>
+              </td>
+              <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                <p class="text-gray-900 whitespace-no-wrap">{{issue.department}}</p>
+                <p class="text-gray-600 whitespace-no-wrap">Department</p>
+              </td>
+
+              <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                <p class="text-gray-900 whitespace-no-wrap">{{issue.service_type}}</p>
+                <p class="text-gray-600 whitespace-no-wrap">Service Type</p>
+              </td>
+
+              <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                <p class="text-gray-900 whitespace-no-wrap">${{issue.cost}}</p>
+                <p class="text-gray-600 whitespace-no-wrap">KSH</p>
+              </td>
+
+              <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                <p class="text-gray-900 whitespace-no-wrap">${{issue.cost}}</p>
+                <p class="text-gray-600 whitespace-no-wrap">Status</p>
+              </td>
+
+              <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                <p class="text-gray-900 whitespace-no-wrap">{{issue.created_at}}</p>
+                <p class="text-gray-600 whitespace-no-wrap">Date</p>
+              </td>
+
+              <td
+                class="px-5 py-5 border-b border-gray-200 bg-white text-sm text-right"
+              >
+                <button
+                  type="button"
+                  class="inline-block text-gray-500 hover:text-gray-700"
+                >
+                  <svg
+                    class="inline-block h-6 w-6 fill-current"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      d="M12 6a2 2 0 110-4 2 2 0 010 4zm0 8a2 2 0 110-4 2 2 0 010 4zm-2 6a2 2 0 104 0 2 2 0 00-4 0z"
+                    />
+                  </svg>
+                </button>
+              </td>
+            </tr>
+            {% empty %}
+            <h2>Nothing Found</h2>
+            {% endfor %}
+
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
 
 {% endblock %}
